# proto-sketch

./: .gitignore  .gitmodules  LICENSE  README.md  README.zh-CN.md  dockerfile  pyproject.toml
.github/workflows/: build-docker-image.yaml  release.yaml
app/: server.py
core/: cli.py  draw.py  parser.py  parsetab.py  proto.py  requirements.txt  setting.py  svg.py  utils.py
